# samudra-setu

./: .env.example  README.md  firestore.rules  package-lock.json  package.json
.github/workflows/: deploy.yml
docs/: backend.json
logistics_shipment_env/: .gitignore  Dockerfile  PROJECT_SPEC.md  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_client.py  validate-submission.sh
logistics_shipment_env/examples/: train_grpo.py
logistics_shipment_env/logistics_shipment_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logistics_shipment_env/server/: __init__.py  app.py  environment.py  grader.py  logistics_environment.py  requirements.txt  scenarios.py
public/: hazard-reports.json  iot-devices.json
src/ai/: dev.ts
src/ai/flows/: analyze-report-image.ts  analyze-social-media-sentiment.ts  analyze-social-media-trends.ts  generate-safety-precautions.ts  verify-report-authenticity.ts
src/app/: layout.tsx  page.tsx
src/app/alerts/: page.tsx
src/app/dashboard/: page.tsx
src/app/login/: page.tsx
src/app/needs/: page.tsx
src/components/auth/: LoginForm.tsx  PhoneLoginForm.tsx  SignupForm.tsx
src/components/common/: GoogleTranslateWidget.tsx  HazardReportCard.tsx  Logo.tsx
src/components/home/: Dashboard.tsx  HighPriorityAlert.tsx  MapWrapper.tsx  RecentReports.tsx  SocialStats.tsx  Stats.tsx
src/components/layout/: Footer.tsx  Header.tsx
src/components/needs/: NeedsForm.tsx
src/components/report/: ReportHazardForm.tsx
src/context/: IoTDeviceContext.tsx  NeedsContext.tsx
src/lib/: data.ts
(+1 files in other folders)
