[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "logistics-shipment-env"
version = "0.1.0"
description = "AI Logistics Coordinator RL Environment — Meta PyTorch OpenEnv Hackathon"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = [
    "openenv",
    "fastmcp>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["envs.logistics_shipment_env*", "server*"]
